<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@android:color/background_light">

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/tv_cur_exercises"
		android:layout_marginTop="20dp"
		android:text="@string/zero_digit"
		android:layout_alignParentTop="true"
		android:layout_alignParentRight="true"
		android:layout_marginRight="20dp"
		android:textSize="40sp"
		android:textColor="#0004FE"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/tv_done"
		android:text="@string/zero_digit"
		android:layout_alignParentTop="true"
		android:layout_marginTop="80dp"
		android:layout_alignParentRight="true"
		android:layout_marginRight="20dp"
		android:textSize="40sp"
		android:textColor="#0004FE"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/tv_remaining"
		android:text="@string/zero_digit"
		android:layout_centerVertical="true"
		android:layout_alignParentTop="true"
		android:layout_alignParentRight="true"
		android:layout_marginRight="20dp"
		android:layout_marginTop="140dp"
		android:textSize="40sp"
		android:textColor="#0004FE"/>

	<Button
		android:layout_width="match_parent"
		android:layout_height="40dp"
		android:text="@string/done"
		android:id="@+id/btn_done"
		android:layout_alignParentBottom="true"
		android:layout_alignParentLeft="true"
		android:background="@drawable/btn_custom"
		android:layout_margin="10dp"
		android:textColor="@android:color/background_light"
		android:textSize="20sp"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/current_dips"
		android:layout_alignParentLeft="true"
		android:layout_marginLeft="20dp"
		android:layout_marginTop="20dp"
		android:textSize="40sp"
		android:id="@+id/textView"
		android:textColor="#0004FE"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/completed"
		android:layout_alignParentLeft="true"
		android:layout_marginLeft="20dp"
		android:layout_marginTop="80dp"
		android:textSize="40sp"
		android:textColor="#0004FE"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/remaining"
		android:textSize="40sp"
		android:layout_alignParentTop="true"
		android:layout_marginTop="140dp"
		android:layout_marginLeft="20dp"
		android:textColor="#0004FE"/>
</RelativeLayout>

