<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:background="@android:color/background_light">

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/training_finished"
		android:layout_gravity="center"
		android:textSize="20sp"
		android:layout_marginLeft="10dp"
		android:layout_marginTop="10dp"
		android:layout_marginRight="10dp"
		android:layout_marginBottom="5dp"
		android:textColor="#0004FE"/>

	<Button
		android:layout_width="fill_parent"
		android:layout_height="40dp"
		android:text="@string/msg_very_easy"
		android:id="@+id/btn_easy"
		android:layout_gravity="center"
		android:background="@drawable/btn_custom"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:layout_marginTop="5dp"
		android:layout_marginBottom="5dp"
		android:textColor="@android:color/background_light"
		android:textSize="20sp"/>

	<Button
		android:layout_width="fill_parent"
		android:layout_height="40dp"
		android:text="@string/msg_fine"
		android:id="@+id/btn_fine"
		android:layout_gravity="center"
		android:background="@drawable/btn_custom"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:layout_marginTop="5dp"
		android:layout_marginBottom="5dp"
		android:textColor="@android:color/background_light"
		android:textSize="20sp"/>

	<Button
		android:layout_width="fill_parent"
		android:layout_height="40dp"
		android:text="@string/msg_very_hard"
		android:id="@+id/btn_hard"
		android:layout_gravity="center"
		android:background="@drawable/btn_custom"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:layout_marginTop="5dp"
		android:layout_marginBottom="5dp"
		android:textColor="@android:color/background_light"
		android:textSize="20sp"/>
</LinearLayout>