<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="255dp">

		<ImageView
			android:background="@drawable/digit_9"
			android:contentDescription="@string/left_digit"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:id="@+id/iv_digit_left"
			android:layout_gravity="center_horizontal|top"
			android:layout_weight="50"
			android:layout_marginTop="10dp"
			android:layout_marginBottom="5dp"
			android:layout_marginLeft="10dp"/>

		<ImageView
			android:background="@drawable/digit_0"
			android:contentDescription="@string/right_digit"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:id="@+id/iv_digit_right"
			android:layout_gravity="center_horizontal|top"
			android:layout_weight="50"
			android:layout_marginTop="10dp"
			android:layout_marginBottom="5dp"
			android:layout_marginRight="10dp"/>
	</LinearLayout>

	<Button
		android:layout_width="match_parent"
		android:layout_height="40dp"
		android:text="@string/proceed"
		android:id="@+id/btn_proceed"
		android:background="@drawable/btn_custom"
		android:textColor="@android:color/background_light"
		android:layout_marginBottom="10dp"
		android:layout_marginRight="10dp"
		android:layout_marginLeft="10dp"
		android:layout_marginTop="5dp"
		android:textSize="20sp"/>
</LinearLayout>