<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@android:color/background_light">

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/are_you_ready"
		android:id="@+id/tv_hello"
		android:layout_gravity="left|center_vertical"
		android:textSize="20sp"
		android:textColor="#0004FE"/>

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="left|center_vertical">

		<Button
			android:layout_width="wrap_content"
			android:layout_height="40dp"
			android:text="@string/yes"
			android:id="@+id/btn_yes"
			android:layout_gravity="left|center_vertical"
			android:layout_weight="50"
			android:background="@drawable/btn_custom"
			android:layout_marginTop="10dp"
			android:layout_marginBottom="10dp"
			android:layout_marginRight="5dp"
			android:layout_marginLeft="10dp"
			android:textColor="@android:color/background_light"
			android:textSize="20sp"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="40dp"
			android:text="@string/no"
			android:id="@+id/btn_no"
			android:layout_gravity="left|center_vertical"
			android:layout_weight="50"
			android:background="@drawable/btn_custom"
			android:layout_marginTop="10dp"
			android:layout_marginBottom="10dp"
			android:layout_marginLeft="5dp"
			android:layout_marginRight="10dp"
			android:textColor="@android:color/background_light"
			android:textSize="20sp"/>
	</LinearLayout>
</LinearLayout>